--- a/project.html
+++ b/project.html
@@ -37,13 +37,6 @@ body
 	width:30px;
 	padding:20px;
 }
-button
-{
-	font-size:20;
-	height:4%;
-	border-radius:5px;
-	width:8%;
-}
 .dropdown
 {
 	width:90%;
@@ -82,6 +75,10 @@ button
 	position:relative;
 }
 .dropdown ul li ul li ul
+{
+	position:relative;
+}
+.dropdown ul li ul li ul li
 {
 	position:relative;
 }
