--- a/project.html
+++ b/project.html
@@ -10,6 +10,8 @@ body
 {
 	background-image:url('login1.png');
 	background-size:auto;
+	background-color:black;
+	background-repeat:no-repeat;
 }
 .active
 {
@@ -45,7 +47,7 @@ body
 }
 .dropdown ul li
 {
-	background-color:blue;
+	background-color:#241151;
 	color:white;
 	width:200px;
 	font-size:15px;
