--- a/resume.html
+++ b/resume.html
@@ -7,9 +7,11 @@
 	margin:0px;
 }
 body
-{
+{	
 	background-image:url('login1.png');
 	background-size:auto;
+	background-color:black;
+	background-repeat:no-repeat;
 }
 .active
 {
