--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@ body
 	background-color:black;
 	background-image:url('login1.png');
 	background-size:auto;
+	background-repeat:no-repeat;
 }
 .active
 {
