--- a/login1.html
+++ b/login1.html
@@ -10,6 +10,8 @@ body
 {
 	background-image:url('login1.png');
 	background-size:auto;
+	background-color:black;
+	background-repeat:no-repeat;
 }
 .LoginBox
 {
