--- a/register.html
+++ b/register.html
@@ -9,6 +9,7 @@
 body
 {	
 	background-image:url('login1.png');
+	background-color:black;
 	background-repeat:no-repeat;
 	background-size:auto;
 	align:center;
