--- a/login1.html
+++ b/login1.html
@@ -17,8 +17,8 @@ body
 {
 	background-color:#dadae6;
 	margin-top:10%;
-	width:30%;
-	height:45%;
+	width:500px;
+	height:350px;
 	padding:30px 40px 5px 60px;
 	box-size:border-box;
 	float:right;
