--- a/register.html
+++ b/register.html
@@ -1,6 +1,7 @@
 <HTML>
 <HEAD>
 <TITLE >Registration Page</TITLE>
+<link rel='preload' as='regimg' href='circle1.jpg'>
 <style type="text/css">
 *
 {
