--- a/project.html
+++ b/project.html
@@ -41,7 +41,7 @@ body
 }
 .dropdown
 {
-	width:90%;
+	width:150px;
 	height:120px;
 	margin-left:0px;
 }
@@ -56,7 +56,7 @@ body
 	line-height:25px;
 	opacity:0.8;
 	padding:15px 15px 15px 15px;
-	border-radius:30px;
+	border-radius:10px;
 }
 .dropdown ul li ul
 {
