--- a/register.html
+++ b/register.html
@@ -24,7 +24,7 @@ h1
 }
 .table
 {	
-	background-image:url('circle1.jpg');
+	background-image:url('regimg');
 	background-size:100%;
 	padding:20px 20px 20px 20px;
 	margin-left:auto;
